<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingRight="20dp">

    <EditText
        android:id="@+id/filter_by_location_edit_text"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:inputType="text"
        android:autofillHints="@string/location"
        android:hint="@string/location"/>
</LinearLayout>

